# ChangeLog for app-misc/mc
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/app-misc/cvs-repo/gentoo-x86/app-misc/mc/ChangeLog,v 1.227 2011/10/21 16:29:53 slyfox Exp $

  21 Oct 2011; Sergei Trofimovich <slyfox@gentoo.org> metadata.xml:
  Added myself to maintainers.

  21 Oct 2011; Sergei Trofimovich <slyfox@gentoo.org> mc-4.8.0.ebuild,
  +files/mc-4.8.0-fix-nls.patch:
  Fixed build failure in USE=-nls case by Nikos Chantziaras (bug #387949)

*mc-4.8.0 (20 Oct 2011)
*mc-4.7.5.5 (20 Oct 2011)

  20 Oct 2011; Sergei Trofimovich <slyfox@gentoo.org> +mc-4.7.5.5.ebuild,
  +mc-4.8.0.ebuild:
  Version bump (requested by Anton Kochkov in bug #387883)

  14 Aug 2011; Fabian Groffen <grobian@gentoo.org> mc-4.7.5.3.ebuild:
  Allow linkage to succeed on Solaris, bug #378699 by Daniel Vergien

  07 Aug 2011; Raúl Porcel <armin76@gentoo.org> mc-4.7.5.2.ebuild:
  alpha/ia64/s390/sh/sparc stable wrt #373225

  01 Aug 2011; Markus Meier <maekke@gentoo.org> mc-4.7.5.2.ebuild:
  amd64/x86 stable, bug #373225

  31 Jul 2011; Jeroen Roovers <jer@gentoo.org> mc-4.7.5.2.ebuild:
  Stable for HPPA (bug #373225).

  30 Jul 2011; Sergei Trofimovich <slyfox@gentoo.org> -mc-4.7.0.9.ebuild,
  -mc-4.7.4-r1.ebuild, -mc-4.7.5.ebuild, -mc-4.7.5.1.ebuild:
  Removed intermediate versions.

*mc-4.7.5.3 (30 Jul 2011)

  30 Jul 2011; Sergei Trofimovich <slyfox@gentoo.org> +mc-4.7.5.3.ebuild:
  Version bump.

  26 Jul 2011; Markus Meier <maekke@gentoo.org> mc-4.7.5.2.ebuild:
  arm stable, bug #373225

  25 Jul 2011; Kacper Kowalik <xarthisius@gentoo.org> mc-4.7.5.2.ebuild:
  ppc/ppc64 stable wrt #373225

  05 Jul 2011; Alex Alexander <wired@gentoo.org> mc-4.7.5.2.ebuild:
  added ~x64-macos

*mc-4.7.5.2 (12 Apr 2011)

  12 Apr 2011; Alex Alexander <wired@gentoo.org> +mc-4.7.5.2.ebuild:
  version bump

*mc-4.7.5.1 (06 Feb 2011)

  06 Feb 2011; Alex Alexander <wired@gentoo.org> +mc-4.7.5.1.ebuild:
  version bump

*mc-4.7.5 (01 Feb 2011)
