@@ -1,5 +1,5 @@
 -----BEGIN PGP SIGNED MESSAGE-----
-Hash: SHA1
+Hash: SHA512
 
 AUX mc-4.8.0-fix-nls.patch 949 RMD160 24627543ec6744b1b1d710a306dce4d5782e360e SHA1 d70b0ec63f65b72e414efcac2cc04e75740848d1 SHA256 504856248f6c3ab21870c7555f31cdcd9ac509c883ab6cc2929440fb9d1e2216
 DIST mc-4.7.0.10.tar.bz2 2862849 RMD160 83a527a94a81f886eb7f80b8965554bf927cad65 SHA1 2bc13f963780eaddac2f675b9145656d759f974e SHA256 99136c447a718c6bd681cb0f7d3ab9df4f5494d35cb3682f01ccf004873e56fb
@@ -13,13 +13,24 @@ EBUILD mc-4.7.0.3.ebuild 1706 RMD160 47509be466b4c9cb659cbaee63ac3f4919802b30 SH
 EBUILD mc-4.7.5.2.ebuild 1932 RMD160 3b87f23cb58a5a5f9b72b4f201a235790733413b SHA1 4b941eaa1a692cbb2a80e8eccbffa15ded7732c6 SHA256 052230597b16113163c4aa7ccb068614fd1cdbe710ef9ff084f46e0a3375fcfc
 EBUILD mc-4.7.5.3.ebuild 2021 RMD160 c993e962d2a909d8bf70711bc4606833413f50fd SHA1 b51b3a2c4b30e38ec9f4a6db80d63b6622e7bc4d SHA256 69eb538e74a8910ba22449bb616dbbce1d1c3bd71d641d66133d389815eca4bf
 EBUILD mc-4.7.5.5.ebuild 2018 RMD160 0918ae22d12e861303f8a195a635e07c1d1c8d93 SHA1 f551966487ff962c8bbc449bdc9cec7ffc0f8ae6 SHA256 4781e7bb5fddc12f377a42103a05637e525cdae9fbe7d82114e187dbe76eb692
+EBUILD mc-4.8.0-r1.ebuild 2166 RMD160 c41af4ee2309720cf75bfe009f90f1f8b11c3482 SHA1 0d7270e3d5f6bab1983471a0ad36c70493defb75 SHA256 cb1635c7ce8d77a34175800e4bb2fe4ade9a996d062cf4a215581ca7c9221506
 EBUILD mc-4.8.0.ebuild 2129 RMD160 d89babe5e2963e0321cbb837efb0a14880fdd643 SHA1 c55c2607670aac419a840bca667ae77bca3a6fa0 SHA256 02153fb918ef5288fbc4dfe181247f768b78edc9b9434a7710246dd2382f14a5
-MISC ChangeLog 32227 RMD160 3e23e5d2b7ded4f715cc58784f560e4af7119711 SHA1 6ee8866ee37c602b2449e47e0de83ca8173ec630 SHA256 69d3363c7f1a27280c9aaab1de84200adf8645df8ee3c1fc969779bbc8b6167d
-MISC metadata.xml 409 RMD160 f14c41b9dac31c927a6594e323d03ed479e31df5 SHA1 2fff715168ffaa968931c286576cf3d44787c0c8 SHA256 4b17c78196135dfabc60685a4ea0535f7b692e0cb2035028f0890a1dd7cc8c1c
+MISC ChangeLog 32394 RMD160 7534c1c14bf3a7ab4e89ceb4b82d278a57ed513e SHA1 3800c6fef1a1baf511cc541c1a526efc803563ce SHA256 3b529c08940b38346067c00877172c0fcdcb815a997c0e25bb94862f1923cb37
+MISC metadata.xml 537 RMD160 c0111e0e7a9f3d60dbed2c2d623cd302caa71d2f SHA1 d93980823087e3a75b2c1fdb2bcddcf7af05b40c SHA256 b48a361bbc299ba292ab56ced28b9dba200c3006e97604435da7f8f4004638bf
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.17 (GNU/Linux)
+Version: GnuPG v2.0.18 (GNU/Linux)
 
-iEYEARECAAYFAk6hnu8ACgkQcaHudmEf86qvEgCfSN39rb/ePweZSaYZeNi4tVta
-8CwAniJ5NLmhgFjibwvdj38IWS4LMxP+
-=x5zp
+iQIcBAEBCgAGBQJOr6/UAAoJEDZF8K7rm0r6xaUP/jdmlZ+iNoVT4vF18oIdw94v
+WzVoTlHdZeIhItGtRqwG7BkT5wTkrQUsoy+f3w3JdhiKYJNapsQyFsseI9EJCc7C
+UmQhOrPezt7UFWr8fTCC65PTAHDw4DTnA+WsigItv+ekJFoBYZUMw+3vWg9dguxe
+vjEUZdZkMS5yCZpShTJGTXj6HpGPldKufP0UBDRw1iXpnxblVIGIcSzGBsMBjD2L
+yFu536VgV86jQjeXp8Cnrt+RkxLYQyX8nxUvixPSG+G0w2VctDDoB5IQoIjImceL
+knH78z+p+5TVuldDj4wM4dFR4cVZWZtSwyPvLjekhzn8WLNvbz+wsQbXGnLhlrB6
+Hzvdm8P6+yzcWt8wjEr3jxu9us3Sl91ymn5DVq8Ohk7Psb8jHqg/kLrQqXotFvuJ
+S6g4mJedGhVC7n+9SXIkaHrwHduX+hQUeJa4ETIWmSE1+ZIjbxXryVdOQl05rHUI
+EilyAsHOzpzoFPjf+lmNH7MH93NMthNMPnGYJ7YcCXUMbOqBIXlkfl+vh5SYg85y
+ruFf1XOSYAn1X7UnSI36QsIIn1jKctXSgoaRl+lFkfNOGvPEKYxv9yqyMwhoVrdH
+VLFL4usrdv+he4Exmn63ipVRmw2RsslS5tOqiqNiffJL50sWlioWHDR50rzJ4a3+
+AVrAPp11qsagI1uGs8V4
+=LH7/
 -----END PGP SIGNATURE-----
