@@ -1,6 +1,12 @@
 # ChangeLog for app-misc/mc
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/app-misc/cvs-repo/gentoo-x86/app-misc/mc/ChangeLog,v 1.227 2011/10/21 16:29:53 slyfox Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/app-misc/cvs-repo/gentoo-x86/app-misc/mc/ChangeLog,v 1.228 2011/11/01 08:37:27 wired Exp $
+
+*mc-4.8.0-r1 (01 Nov 2011)
+
+  01 Nov 2011; Alex Alexander <wired@gentoo.org> +mc-4.8.0-r1.ebuild,
+  metadata.xml:
+  new use flag: mclib. install NEWS file, bug 389143
 
   21 Oct 2011; Sergei Trofimovich <slyfox@gentoo.org> metadata.xml:
   Added myself to maintainers.
